--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <link href="style.css" rel="stylesheet" type="text/css"/>
         
         <!-- Document Title -->      
-        <title>Kraft | Minimal Portfolio HTML5 Template</title>
+        <title>Kevin Torrinton | UX Designer / Product Manager</title>
         
     </head>
     <body>
@@ -61,11 +61,13 @@
                             <div class="col-sm-12">
                                 <div class="page-title has-description">
                                     <h1>Want to get in touch?</h1>
-                                    <p>Write me a message via form, I will reply shortly.</p>
+                                    <p>Write me a message, I will reply shortly.</p>
                                 </div>
                             </div>
                             <div class="col-sm-8 col-md-8">
-                                <form action="include/contact.php" method="post" id="contact-form" class="contact-form">
+
+
+                                <form action="https://formspree.io/mpzagrpb" method="POST" id="contact-form" class="contact-form">
                                     <div class="form-process"></div>
                                     <div class="col-sm-6 no-padding-left form-control-wrap">
                                         <input id="name" class="form-control" placeholder="Name*" name="name" type="text">
@@ -80,26 +82,52 @@
                                         <span class="message contact-error-msg">Please fill in the required field.</span>
                                     </div>
                                     <div class="form-submit">
-                                        <button name="submit" type="submit" id="submit">Send Message</button>
+                                        <button name="submit" id="submit" type="submit" value="Send">Send Message</button>
                                     </div>
                                     <br>
                                     <span class="contact-failed">Message not sent, Please try again.</span>
                                     <span class="contact-success">Message sent successfully.</span>
                                 </form>
+
+
+<!--
+                                <form method="POST" action="https://formspree.io/kevin.torrington@gmail.com">
+                                    <div class="row">
+                                      <div class="col-md-6">
+                                        <div class="form-group">
+                                          <input type="text" name="name" placeholder="Name" class="form-control">
+                                          <p class="help-block text-danger"></p>
+                                        </div>
+                                      </div>
+                                      <div class="col-md-6">
+                                        <div class="form-group">
+                                          <input type="email" id="email" class="form-control" placeholder="Email" required="required">
+                                          <p class="help-block text-danger"></p>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <div class="form-group">
+                                      <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
+                                      <p class="help-block text-danger"></p>
+                                    </div>
+                                    <button type="submit" class="btn btn-default">Send Message</button>
+                                  </form>
+
+                                  -->
                             </div>
                             <div class="col-sm-4 col-md-4">
                                 <div class="contact-info">
                                     <div>
                                         <span>Email</span>
-                                        kraft@gmail.com
+                                        kevin.torrington@gmail.com
                                     </div>
                                     <div>
                                         <span>Phone</span>
-                                        022844 998 234
+                                        07941575044
                                     </div>
                                     <address>
                                         <span>Address</span>
-                                        833 Indian Summer Court<br>Carol Stream, IL 60188
+                                        Manchester, UK
                                     </address>    
                                 </div>
                             </div>
