--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     <!-- Portfolio Items -->
                                     <div id="portfolio-container" class="cbp" data-layoutmode="grid" data-gaphorizontal="30" data-gapvertical="30" data-captionanimation="zoom" data-animationtype="quicksand" data-large-desktop="2" data-medium-desktop="2" data-tablet="2">
                                         <div class="cbp-item web-app website mobile">
-                                            <a href="details.html" class="cbp-caption">
+                                            <a href="onetime.html" class="cbp-caption">
                                                 <div class="cbp-caption-defaultWrap">
                                                     <img src="images/portfolio/thumbnails-grid/img_1.png" alt="">
                                                 </div>
@@ -103,7 +103,7 @@
                                             </a>
                                         </div>
                                         <div class="cbp-item website">
-                                            <a href="details.html" class="cbp-caption">
+                                            <a href="se.html" class="cbp-caption">
                                                 <div class="cbp-caption-defaultWrap">
                                                     <img src="images/portfolio/thumbnails-grid/img_2.png" alt="">
                                                 </div>
@@ -120,7 +120,7 @@
                                             </a>
                                         </div>
                                         <div class="cbp-item web-app mobile">
-                                            <a href="details.html" class="cbp-caption">
+                                            <a href="bg.html" class="cbp-caption">
                                                 <div class="cbp-caption-defaultWrap">
                                                     <img src="images/portfolio/thumbnails-grid/img_3.png" alt="">
                                                 </div>
@@ -136,7 +136,7 @@
                                             </a>
                                         </div>
                                         <div class="cbp-item website">
-                                            <a href="details.html" class="cbp-caption">
+                                            <a href="electrika.html" class="cbp-caption">
                                                 <div class="cbp-caption-defaultWrap">
                                                     <img src="images/portfolio/thumbnails-grid/img_4.png" alt="">
                                                 </div>
@@ -152,7 +152,7 @@
                                             </a>
                                         </div>
                                         <div class="cbp-item website">
-                                            <a href="details.html" class="cbp-caption">
+                                            <a href="unitrunk.html" class="cbp-caption">
                                                 <div class="cbp-caption-defaultWrap">
                                                     <img src="images/portfolio/thumbnails-grid/img_5.png" alt="">
                                                 </div>
@@ -167,7 +167,7 @@
                                             </a>
                                         </div>
                                         <div class="cbp-item website">
-                                            <a href="details.html" class="cbp-caption">
+                                            <a href="blucky.html" class="cbp-caption">
                                                 <div class="cbp-caption-defaultWrap">
                                                     <img src="images/portfolio/thumbnails-grid/img_6.png" alt="">
                                                 </div>
