--- a/contact.html
+++ b/contact.html
@@ -67,53 +67,25 @@
                             <div class="col-sm-8 col-md-8">
 
 
-                                <form action="https://formspree.io/mpzagrpb" method="POST" id="contact-form" class="contact-form">
-                                    <div class="form-process"></div>
+                                <form action="https://formspree.io/mpzagrpb" method="POST" class="contact-form">
+                                    
                                     <div class="col-sm-6 no-padding-left form-control-wrap">
-                                        <input id="name" class="form-control" placeholder="Name*" name="name" type="text">
+                                        <input class="form-control" placeholder="Name*" name="name" type="text">
                                         <span class="name contact-error-msg">Please fill in the required field.</span>
                                     </div>
                                     <div class="col-sm-6 no-padding-right form-control-wrap">
-                                        <input id="Email" class="form-control" placeholder="Email*" name="email" type="email" >
+                                        <input class="form-control" placeholder="Email*" name="email" type="email" >
                                         <span class="email contact-error-msg">Please enter a valid email address.</span>
                                     </div>
                                     <div class="col-sm-12 no-padding-left no-padding-right form-control-wrap">
-                                        <textarea id="message" class="form-control" placeholder="Your Message*" name="message"  ></textarea>
+                                        <textarea class="form-control" placeholder="Your Message*" name="message"  ></textarea>
                                         <span class="message contact-error-msg">Please fill in the required field.</span>
                                     </div>
-                                    <div class="form-submit">
-                                        <button name="submit" id="submit" type="submit" value="Send">Send Message</button>
-                                    </div>
-                                    <br>
-                                    <span class="contact-failed">Message not sent, Please try again.</span>
-                                    <span class="contact-success">Message sent successfully.</span>
+                                            <button type="submit" value="Send" class="btn btn-default">Send Message</button>
+
                                 </form>
 
 
-<!--
-                                <form method="POST" action="https://formspree.io/kevin.torrington@gmail.com">
-                                    <div class="row">
-                                      <div class="col-md-6">
-                                        <div class="form-group">
-                                          <input type="text" name="name" placeholder="Name" class="form-control">
-                                          <p class="help-block text-danger"></p>
-                                        </div>
-                                      </div>
-                                      <div class="col-md-6">
-                                        <div class="form-group">
-                                          <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-                                          <p class="help-block text-danger"></p>
-                                        </div>
-                                      </div>
-                                    </div>
-                                    <div class="form-group">
-                                      <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-                                      <p class="help-block text-danger"></p>
-                                    </div>
-                                    <button type="submit" class="btn btn-default">Send Message</button>
-                                  </form>
-
-                                  -->
                             </div>
                             <div class="col-sm-4 col-md-4">
                                 <div class="contact-info">
