added top levl desc

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                             </div>
                             <div class="col-md-6 col-sm-12 margin-top-35">
                                 <h2>About</h2>
-                                    <p> was born in Bristol in 1985 and then moved to Manchester after leaving school to start my first business. Throughout my creaer, I have focused on roles that are customer-centric and that make people happy.</p>
+                                    <p>I was born in Bristol in 1985 and then moved to Manchester after leaving school to start my first business. Throughout my creaer, I have focused on roles that are customer-centric and that make people happy.</p>
                                     <p>I soon became involved with the software development lifecycle, managing and designing user-centric products.</p>
                                     <p>I have been fortunate to work on some major projects for large blue-chip organisations of which  very proud.</p>
                                     <p>I also have a diploma in <b>UX Design.</b></p>
