--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
                                                     <div class="cbp-l-caption-alignLeft">
                                                         <div class="cbp-l-caption-body">
                                                             <div class="cbp-l-caption-title">Unitrunk</div>
-                                                            <div class="cbp-l-caption-desc"></div>
+                                                            <div class="cbp-l-caption-desc">Unitrunk a Northen Ireland cable management company needed to replace their outdated website with a new mobile responsive dynamic product driven website.</div>
+                                                            
                                                         </div>
                                                     </div>
                                                 </div>
@@ -175,7 +176,7 @@
                                                     <div class="cbp-l-caption-alignLeft">
                                                         <div class="cbp-l-caption-body">
                                                             <div class="cbp-l-caption-title">B Lucky Casino Hire</div>
-                                                            <div class="cbp-l-caption-desc"></div>
+                                                            <div class="cbp-l-caption-desc">I founded B Lucky, a casino-themed events company to compete nationally. So I needed to design and build a website to support lead generation, manage bookings and event staff.</div>
                                                         </div>
                                                     </div>
                                                 </div>
