Almost finished se content

--- a/se.html
+++ b/se.html
@@ -86,21 +86,26 @@
                                 <div class="col-sm-5">
                                     <div class="project-title">
                                         <h1>Schneider Electric</h1>
-                                        <p>Images</p>
+                                     
                                     </div>
                                     <div class="project-desc">
-                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
-                                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle. </p>
+                                        <p>Schneider Electric one of the worlds biggest electrical manufacturers needed to replace their outdated Lotus Notes estimating software.</p>
+                                        <p>The system needed to be created as both a native iPad app and a web-app so engineers could work seamlessly between devices.</p>
                                     </div>
-                                    <ul class="project-meta margin-top-20 margin-bottom-20">
-                                        <li><span>Client</span>James Hall</li>
-                                        <li><span>Year</span>2016</li>
-                                        <li class="project-share">
-                                            <span>Share</span>
-                                            <a href="#">Facebook</a>
-                                            <a href="#">Twitter</a>
-                                            <a href="#">Pinterest</a>
-                                        </li>
+                                    <ul class="project-meta margin-top-40 margin-bottom-20">
+                                        <li><span>My role</span></li>
+                                        <p>User research, prototyping, UX/UI design and creation and maintenance of a design system. In addition, I worked as the product manager.</p>
+                                        <li class="margin-top-40"><span>Step 1 - Understand</span></li>
+                                        <p>I first started by running an affinity diagram session with around 30 Schneider Electric field engineers and support staff.</p>
+                                            <p>They told me how they "hated" using the lotus system as it required them to carry their slow heavy laptops onsite, and often they would have to "hack the system" to get it to work the way they wanted.</p>
+                                        <li class="margin-top-40"><span>Step 2 - Define</span></li>
+                                        <p>After performing detailed research of the existing system, my team and I reviewed all of the research and ran an affinity diagram session of our own to see if we could define the problems.</p>
+                                            <p>It was clear that some of the steps in the process needed to be removed to make the quote process as efficient as possible.</p>
+                                            <p>Also, automation and clever defaults where essential as users would often need to input data multiple times.</p>
+                                            <p>We then defined personas for each user type such as field engineers, back-office admins, regional and national managers and directors.</p>
+                                            <li class="margin-top-40"><span>Step 3 - Ideate</span></li>
+                                            <p>I then sketched out some ideas on how I might solve some of the outlined problems but I also needed to consider how components would work on both mobile and desktop. </p>
+                                                <p>One of the first improvements identified was offline catching of quotes and product data to allow engineers to go "Offline" which was essential on secure site visits.</p>
                                     </ul>
 
                                 </div>
