Made copy changes.

--- a/blucky.html
+++ b/blucky.html
@@ -113,7 +113,7 @@
                                             <a href="index.html">All Works</a>
                                         </li>
                                         <li class="page-next">
-                                            <a class="next" href="onetime.html" rel="next">Next Work</a>
+                                            <a class="next" href="FlyUX.html" rel="next">Next Work</a>
                                         </li>					    
                                     </ul>
                                 </div>
