--- a/onetime.html
+++ b/onetime.html
@@ -95,36 +95,44 @@
                                         <h1>OneTime</h1>
                                     </div>
                                     <div class="project-desc">
-                                        <p>OneTime is a product management system design to give manufacturers and retailers better control of detailed product information. Making it easy to upload, manage and then share the right data with their customers.</p>
+                                        <p>OneTime is a product management system designed to give manufacturers and retailers better
+                                            control of detailed product information, making it easy to upload, manage, and then share the
+                                            right data with their customers.</p>
                                         <p>
-                                                My team and I were tasked with redesigning an ageing system with a new one-page Angular 7 .net core 2 web app with a focus on simplicity, speed and mobile responsiveness.</p>
+                                            My team and I were tasked with redesigning an ageing system with a new one-page Angular 7 .net core 2 web app with a focus on simplicity, speed, and mobile responsiveness.</p>
                                     </div>
                                     <ul class="project-meta margin-top-40 margin-bottom-20">
-                                        <li><span>My role</span></li>
-                                        <p>User research, prototyping, UX/UI design and creation and maintenance of a design system. In addition, I am the product manager of OneTime.</p>
+                                        <li><span>My Role</span></li>
+                                        <p>User research, prototyping, UX/UI design, and creation and maintenance of a design system. In addition, I am currently the product manager of OneTime.</p>
                                         
                                         <li class="margin-top-40"><span>Step 1 - Understand</span></li>
                                         <p>I first met with clients and preformed detailed interviews regarding the existing tool and processes.</p>
-                                        <p>Some of the responses where very concerning " I hate it when..." and "it's really annoying when" these stong feelings were shared by most users.</p>
-                                        <p>These insights helped me develop my participant screener and perform extensive usability testing on the existing system. </p>
+                                        <p>Some of the responses were very concerning; "I hate it when..." and "it's really annoying when…". These strong feelings were shared by most users.</p>
+                                        <p>These insights helped me develop my participant screener and perform extensive usability testing on the existing system.
+                                        </p>
 
                                         <li class="margin-top-40"><span>Step 2 - Define</span></li>
-                                        <p>After performing detailed research of the existing system, and the competitors, my team and I reviewed all of the research and ran an affinity diagram session to see if we could define the problem.</p>
-                                        <p>It was clear the overall information architecture, need wholesale improvements as users would often get lost in the menus.</p>
-                                        <p>We noticed a large difference in understanding of product management process so we made sure to account for this in our personas.</p>
+                                        <p>After conducting detailed research of the existing system and the competitors, my team and I reviewed all of the research and ran an affinity diagram session to see if we could define the problem.
+                                        </p>
+                                        <p>It was clear the overall information architecture needed wholesale improvements as users would often get lost in the menus.</p>
+                                        <p>We noticed a large difference in understanding of product management processes, so we made sure to account for this in our personas.
+                                        </p>
 
                                         <li class="margin-top-40"><span>Step 3 - Ideate</span></li>
-                                        <p>I then sketched out some ideas on how I might solve some of the outlined problems. One of the first improvements I made was to the complex top-level navigation from 10 options down to three "Import, Manage and share"</p>
-                                        <p>Also, I was able to define some core concepts such as the data explorer and the product inspector.</p>
+                                        <p>I then sketched out some ideas on how I might solve some of the outlined problems. One of the first improvements I made was to the complex top-level navigation, reducing the ten options down to three: "Import, Manage, and Share".
+                                        </p>
+                                        <p>Also, I was able to define some core concepts such as the data explorer and the product inspector.
+                                        </p>
 
                                         <li class="margin-top-40"><span>Step 4 - Prototype</span></li>
-                                        <p>I then continued sketching to define major user flows, screen states and key interactions. I then transferred these sketches to a low fidelity digital prototype in Adobe XD to preform future user testing.</p>
+                                        <p>I then continued sketching to define major user flows, screen states, and key interactions. I then transferred these sketches to a low-fidelity digital prototype in Adobe XD to preform future user testing.</p>
                                         <p>Both myself and my team created some technical prototypes to test the feasibility and usability of ideas.</p>
                                         
                                         <li class="margin-top-40"><span>Step 5 - Validate</span></li>
-                                        <p>It was identified that users found channels complex and needed further improvement, so I made changes to address this and re-tested.</p>
-                                        <p>But the overall feedback of "This is so much better" and "I feel more in control" is a great start.</p>
-                                        <p>This project is due to complete January 2020.</p>
+                                        <p>I identified that users found channels complex and needed further improvement, so I made changes to address this and re-tested.</p>
+                                        <p>However, the overall feedback of "This is so much better" and "I feel more in control" is a great start.
+                                        </p>
+                                        <p>This project is due to complete in January 2020.</p>
                                         </li>
                                     </ul>
 
@@ -132,7 +140,7 @@
                                 <div class="col-sm-12">
                                     <ul class="project-nav">
                                         <li class="page-prev">
-                                            <a class="previous" href="blucky.html" rel="prev">Prev Work</a>
+                                            <a class="previous" href="FlyUX.html" rel="prev">Prev Work</a>
                                         </li>
                                         <li class="page-main">
                                             <a href="index.html">All Works</a>
