Added some content and added lightbox

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
         <link href="css/cubeportfolio.css" rel="stylesheet" type="text/css"/>
         <link href="css/owl.carousel.css" rel="stylesheet" type="text/css"/>
         <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
         <!-- Document Title -->      
         <title>Kevin Torrinton | UX Designer / Product Manager</title>
@@ -74,6 +75,8 @@
                                     <p>I soon became involved with the software development lifecycle, managing and designing user-centric products.</p>
                                     <p>I have been fortunate to work on some major projects for large blue-chip organisations of which  very proud.</p>
                                     <p>I also have a diploma in <b>UX Design.</b></p>
+                                    <a id="cv" class="btn" href="images/Kevin Torringtn - CV.pdf" download><i class="fa fa-download" ></i>  Download CV</a>
+
                                 <h3 class="margin-top-40">Skills</h3>
                                     <div class="lists clearfix">
                                         <ul>
