--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                         <div class="cbp-item website">
                                             <a href="se.html" class="cbp-caption">
                                                 <div class="cbp-caption-defaultWrap">
-                                                    <img src="images/portfolio/thumbnails-grid/img_2.png" alt="">
+                                                    <img src="images/portfolio/se/image1@2x.png" alt="">
                                                 </div>
                                                 <div class="cbp-caption-activeWrap">
                                                     <div class="cbp-l-caption-alignLeft">
