Changed all pages.

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <body>
         <!-- Page Wrapper -->
         <div id="page-wrapper">
-
+            <a id="button"></a>
             <!-- Header -->
             <header id="header" class="standard">
                 <div class="header-wrapper">
