Added first draft of project goals

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>OneTime</h4>
-                                            <p>Designed to help marketing teams easily import, manage, and share their product data with their
-                                                customers. </p>
+                                            <p>The goal of this project was to radically rethink how manufacturers and retailers approached product information management. PIM software is not new, but most products in the market fall short with their user experience. With complex user journeys and the inability to allow users to make large changes, it was clear the market was ready for something new.</p>
+                                            <p>OneTime is designed to disrupt the competition!</p>
+                                            
                                             <div class="button">
                                                 <a href="onetime.html">Read More</a>
                                             </div>
@@ -89,8 +90,9 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Schneider Electric</h4>
-                                            <p>One of the world’s biggest electrical manufacturers needed to replace their outdated estimating
-                                                software.</p>
+                                            <p>The goal of this project was to replace an outdated lotus notes enterprise estimating software, used by over 200 field service engineers with an Ipad and web app version. It needed to help the department increase upsell, improve accuracy and traceability.</p>
+                                            <p>Most importantly it needed to as frictionless as possible as engineers had in the past chosen not even bother quoting as the old system was slow, hard to use and often wrong.
+                                            </p>
                                             <div class="button">
                                                 <a href="se.html">Read More</a>
                                             </div>
@@ -105,8 +107,8 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>British Gas</h4>
-                                            <p>I was asked to design and prototype a site survey app for the British Gas Estimating Division
-                                                to improve the profitably and accuracy of field engineer visits.</p>
+                                            <p>The goal of this project was to prototype a site survey app for a new exciting business unit within Centrica / British gas. It would allow engineers to pre-qualify jobs through the use of chatbots and artificial intelligence and image recognition to consider feasibility before travelling to the site to improve profitably and accuracy.</p>
+                                            <p>This exciting new product (I can't discuss the details due to an NDA) is to be piloted with just a few engineers to then be rolled out all 6,000 in the future.</p>
                                             <div class="button">
                                                 <a href="se.html">Read More</a>
                                             </div>
@@ -121,8 +123,8 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Electrika</h4>
-                                            <p>I was asked to design and prototype a site survey app for the British Gas Estimating Division
-                                                to improve the profitably and accuracy of field engineer visits.</p>
+                                            <p>The goal of this project was to completely redesign and reposition a niche ageing estimating tool into a more mainstream online product library that would have broad appeal by the construction industry as a whole.</p>
+                                            <p>The new product needed to be mobile responsive, fast and easy to use while working on construction sites but most importantly it needed to grow product impressions by at least 80% within 12 months.</p>
                                             <div class="button">
                                                 <a href="se.html">Read More</a>
                                             </div>
@@ -137,8 +139,9 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Unitrunk</h4>
-                                            <p>I was asked to design and prototype a site survey app for the British Gas Estimating Division
-                                                to improve the profitably and accuracy of field engineer visits.</p>
+                                            <p>The goal of this project was to completely replace Unitrunks outdated static website with a new product-focused site.</p>
+                                            <p>It needed to be fast, easy to navigate and give the user the ability to download technical information, such as product datasheets.</p>
+                                            <p>The site also needed to include a content management system to allow staff to update news and content but most importantly the site needed to have great usability and SEO.</p>
                                             <div class="button">
                                                 <a href="se.html">Read More</a>
                                             </div>
@@ -152,9 +155,8 @@
                                             <img src="images/service/img_2.png" alt="">
                                         </div>
                                         <div class="box-content">
-                                            <h4>B Lucky Casino Hire</h4>
-                                            <p>One of the world’s biggest electrical manufacturers needed to replace their outdated estimating
-                                                software.</p>
+                                            <h4>B Lucky - Casino Hire</h4>
+                                            <p>As the founder of B Lucky, I needed to build a new website for lead generation that funnelled leads into my booking system/process. I focused on usability and SEO as google organic search PPC traffic was my main route to market.</p>
                                             <div class="button">
                                                 <a href="se.html">Read More</a>
                                             </div>
@@ -169,8 +171,9 @@
                                         </div>
                                         <div class="box-content">
                                             <h4>Fly UX</h4>
-                                            <p>I was asked to design and prototype a site survey app for the British Gas Estimating Division
-                                                to improve the profitably and accuracy of field engineer visits.</p>
+                                            <p>The goal of this project was to consider how I would improve the flight booking process for a fictional airline to achieve a <a id="inlinelink" href="https://www.credential.net/4bf6e9ba-222d-4da9-a42a-1298ee873f95" target="_blank">Professional Diploma in UX Design.</a> </p>
+                                            <p>My coursework called for a native mobile app that addressed all the issues found during my research of market-leading airlines.</p>
+                                            <p>I needed to provide evidence of my UX Design process for my assessors.</p>
                                             <!-- <div class="button">
                                                 <a href="#">Read More</a>
                                             </div> -->
